// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCard tests setup review card test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui container review-card-container"
      >
        <div
          class="ui grid"
        >
          <div
            class="fourteen wide column review-card-left-grid-column"
          >
            <div
              class="ui fluid container"
            >
              <div
                class="ui message"
                style="background-color: rgb(255, 241, 241);"
              >
                <i
                  aria-hidden="true"
                  class="red warning circle icon"
                />
                Please keep in mind that this review is more than 5 years old.
              </div>
              <div
                class="ui container review-card-left-column-header-container"
              >
                <div
                  class="ui header display-header"
                >
                  Adam
                   
                  Canon
                </div>
                <h5
                  class="ui header"
                >
                  2014-07-31
                </h5>
                <div
                  class="sc-AxirZ JnqYJ"
                >
                  ID: 
                  1
                </div>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <h3
                class="ui header"
              >
                Workload
              </h3>
              <p>
                Excepteur sint occaecat cupidatat non proident.
              </p>
            </div>
          </div>
          <div
            class="two wide column review-card-right-grid-column"
          >
            <div
              class="ui container"
            >
              <div
                class="ui centered grid votes-container-grid"
              >
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="blue-upvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    10
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="downvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    2
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="funny.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    3
                  </strong>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui container review-card-container"
    >
      <div
        class="ui grid"
      >
        <div
          class="fourteen wide column review-card-left-grid-column"
        >
          <div
            class="ui fluid container"
          >
            <div
              class="ui message"
              style="background-color: rgb(255, 241, 241);"
            >
              <i
                aria-hidden="true"
                class="red warning circle icon"
              />
              Please keep in mind that this review is more than 5 years old.
            </div>
            <div
              class="ui container review-card-left-column-header-container"
            >
              <div
                class="ui header display-header"
              >
                Adam
                 
                Canon
              </div>
              <h5
                class="ui header"
              >
                2014-07-31
              </h5>
              <div
                class="sc-AxirZ JnqYJ"
              >
                ID: 
                1
              </div>
            </div>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            </p>
            <h3
              class="ui header"
            >
              Workload
            </h3>
            <p>
              Excepteur sint occaecat cupidatat non proident.
            </p>
          </div>
        </div>
        <div
          class="two wide column review-card-right-grid-column"
        >
          <div
            class="ui container"
          >
            <div
              class="ui centered grid votes-container-grid"
            >
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="blue-upvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  10
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="downvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  2
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="funny.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  3
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui container review-card-container"
      >
        <div
          class="ui grid"
        >
          <div
            class="fourteen wide column review-card-left-grid-column"
          >
            <div
              class="ui fluid container"
            >
              <div
                class="ui message"
                style="background-color: rgb(255, 241, 241);"
              >
                <i
                  aria-hidden="true"
                  class="red warning circle icon"
                />
                Please keep in mind that this review is more than 5 years old.
              </div>
              <div
                class="ui container review-card-left-column-header-container"
              >
                <div
                  class="ui header display-header"
                >
                  Adam
                   
                  Canon
                </div>
                <h5
                  class="ui header"
                >
                  2014-07-31
                </h5>
                <div
                  class="sc-AxirZ JnqYJ"
                >
                  ID: 
                  1
                </div>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <h3
                class="ui header"
              >
                Workload
              </h3>
              <p>
                Excepteur sint occaecat cupidatat non proident.
              </p>
            </div>
          </div>
          <div
            class="two wide column review-card-right-grid-column"
          >
            <div
              class="ui container"
            >
              <div
                class="ui centered grid votes-container-grid"
              >
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="blue-upvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    10
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="blue-downvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    2
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="funny.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    3
                  </strong>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui container review-card-container"
    >
      <div
        class="ui grid"
      >
        <div
          class="fourteen wide column review-card-left-grid-column"
        >
          <div
            class="ui fluid container"
          >
            <div
              class="ui message"
              style="background-color: rgb(255, 241, 241);"
            >
              <i
                aria-hidden="true"
                class="red warning circle icon"
              />
              Please keep in mind that this review is more than 5 years old.
            </div>
            <div
              class="ui container review-card-left-column-header-container"
            >
              <div
                class="ui header display-header"
              >
                Adam
                 
                Canon
              </div>
              <h5
                class="ui header"
              >
                2014-07-31
              </h5>
              <div
                class="sc-AxirZ JnqYJ"
              >
                ID: 
                1
              </div>
            </div>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            </p>
            <h3
              class="ui header"
            >
              Workload
            </h3>
            <p>
              Excepteur sint occaecat cupidatat non proident.
            </p>
          </div>
        </div>
        <div
          class="two wide column review-card-right-grid-column"
        >
          <div
            class="ui container"
          >
            <div
              class="ui centered grid votes-container-grid"
            >
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="blue-upvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  10
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="blue-downvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  2
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="funny.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  3
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui container review-card-container"
      >
        <div
          class="ui grid"
        >
          <div
            class="fourteen wide column review-card-left-grid-column"
          >
            <div
              class="ui fluid container"
            >
              <div
                class="ui message"
                style="background-color: rgb(255, 241, 241);"
              >
                <i
                  aria-hidden="true"
                  class="red warning circle icon"
                />
                Please keep in mind that this review is more than 5 years old.
              </div>
              <div
                class="ui container review-card-left-column-header-container"
              >
                <div
                  class="ui header display-header"
                >
                  Adam
                   
                  Canon
                </div>
                <h5
                  class="ui header"
                >
                  2014-07-31
                </h5>
                <div
                  class="sc-AxirZ JnqYJ"
                >
                  ID: 
                  1
                </div>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <h3
                class="ui header"
              >
                Workload
              </h3>
              <p>
                Excepteur sint occaecat cupidatat non proident.
              </p>
            </div>
          </div>
          <div
            class="two wide column review-card-right-grid-column"
          >
            <div
              class="ui container"
            >
              <div
                class="ui centered grid votes-container-grid"
              >
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="upvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    10
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="downvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    2
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="funny.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    3
                  </strong>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui container review-card-container"
    >
      <div
        class="ui grid"
      >
        <div
          class="fourteen wide column review-card-left-grid-column"
        >
          <div
            class="ui fluid container"
          >
            <div
              class="ui message"
              style="background-color: rgb(255, 241, 241);"
            >
              <i
                aria-hidden="true"
                class="red warning circle icon"
              />
              Please keep in mind that this review is more than 5 years old.
            </div>
            <div
              class="ui container review-card-left-column-header-container"
            >
              <div
                class="ui header display-header"
              >
                Adam
                 
                Canon
              </div>
              <h5
                class="ui header"
              >
                2014-07-31
              </h5>
              <div
                class="sc-AxirZ JnqYJ"
              >
                ID: 
                1
              </div>
            </div>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            </p>
            <h3
              class="ui header"
            >
              Workload
            </h3>
            <p>
              Excepteur sint occaecat cupidatat non proident.
            </p>
          </div>
        </div>
        <div
          class="two wide column review-card-right-grid-column"
        >
          <div
            class="ui container"
          >
            <div
              class="ui centered grid votes-container-grid"
            >
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="upvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  10
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="downvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  2
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="funny.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  3
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 4`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui container review-card-container"
      >
        <div
          class="ui grid"
        >
          <div
            class="fourteen wide column review-card-left-grid-column"
          >
            <div
              class="ui fluid container"
            >
              <div
                class="ui message"
                style="background-color: rgb(255, 241, 241);"
              >
                <i
                  aria-hidden="true"
                  class="red warning circle icon"
                />
                Please keep in mind that this review is more than 5 years old.
              </div>
              <div
                class="ui container review-card-left-column-header-container"
              >
                <div
                  class="ui header display-header"
                >
                  <span
                    class="sc-AxjAm ekCnfx"
                  >
                    COMS1004
                  </span>
                   
                  intro to programming
                </div>
                <h5
                  class="ui header"
                >
                  2014-07-31
                </h5>
                <div
                  class="sc-AxirZ JnqYJ"
                >
                  ID: 
                  1
                </div>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <h3
                class="ui header"
              >
                Workload
              </h3>
              <p>
                Excepteur sint occaecat cupidatat non proident.
              </p>
            </div>
          </div>
          <div
            class="two wide column review-card-right-grid-column"
          >
            <div
              class="ui container"
            >
              <div
                class="ui centered grid votes-container-grid"
              >
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="blue-upvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    10
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="downvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    2
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="funny.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    3
                  </strong>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui container review-card-container"
    >
      <div
        class="ui grid"
      >
        <div
          class="fourteen wide column review-card-left-grid-column"
        >
          <div
            class="ui fluid container"
          >
            <div
              class="ui message"
              style="background-color: rgb(255, 241, 241);"
            >
              <i
                aria-hidden="true"
                class="red warning circle icon"
              />
              Please keep in mind that this review is more than 5 years old.
            </div>
            <div
              class="ui container review-card-left-column-header-container"
            >
              <div
                class="ui header display-header"
              >
                <span
                  class="sc-AxjAm ekCnfx"
                >
                  COMS1004
                </span>
                 
                intro to programming
              </div>
              <h5
                class="ui header"
              >
                2014-07-31
              </h5>
              <div
                class="sc-AxirZ JnqYJ"
              >
                ID: 
                1
              </div>
            </div>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            </p>
            <h3
              class="ui header"
            >
              Workload
            </h3>
            <p>
              Excepteur sint occaecat cupidatat non proident.
            </p>
          </div>
        </div>
        <div
          class="two wide column review-card-right-grid-column"
        >
          <div
            class="ui container"
          >
            <div
              class="ui centered grid votes-container-grid"
            >
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="blue-upvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  10
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="downvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  2
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="funny.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  3
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 5`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui container review-card-container"
      >
        <div
          class="ui grid"
        >
          <div
            class="fourteen wide column review-card-left-grid-column"
          >
            <div
              class="ui fluid container"
            >
              <div
                class="ui message"
                style="background-color: rgb(255, 241, 241);"
              >
                <i
                  aria-hidden="true"
                  class="red warning circle icon"
                />
                Please keep in mind that this review is more than 5 years old.
              </div>
              <div
                class="ui container review-card-left-column-header-container"
              >
                <div
                  class="ui header display-header"
                >
                  <span
                    class="sc-AxjAm ekCnfx"
                  >
                    COMS1004
                  </span>
                   
                  intro to programming
                </div>
                <h5
                  class="ui header"
                >
                  2014-07-31
                </h5>
                <div
                  class="sc-AxirZ JnqYJ"
                >
                  ID: 
                  1
                </div>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <h3
                class="ui header"
              >
                Workload
              </h3>
              <p>
                Excepteur sint occaecat cupidatat non proident.
              </p>
            </div>
          </div>
          <div
            class="two wide column review-card-right-grid-column"
          >
            <div
              class="ui container"
            >
              <div
                class="ui centered grid votes-container-grid"
              >
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="blue-upvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    10
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="blue-downvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    2
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="funny.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    3
                  </strong>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui container review-card-container"
    >
      <div
        class="ui grid"
      >
        <div
          class="fourteen wide column review-card-left-grid-column"
        >
          <div
            class="ui fluid container"
          >
            <div
              class="ui message"
              style="background-color: rgb(255, 241, 241);"
            >
              <i
                aria-hidden="true"
                class="red warning circle icon"
              />
              Please keep in mind that this review is more than 5 years old.
            </div>
            <div
              class="ui container review-card-left-column-header-container"
            >
              <div
                class="ui header display-header"
              >
                <span
                  class="sc-AxjAm ekCnfx"
                >
                  COMS1004
                </span>
                 
                intro to programming
              </div>
              <h5
                class="ui header"
              >
                2014-07-31
              </h5>
              <div
                class="sc-AxirZ JnqYJ"
              >
                ID: 
                1
              </div>
            </div>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            </p>
            <h3
              class="ui header"
            >
              Workload
            </h3>
            <p>
              Excepteur sint occaecat cupidatat non proident.
            </p>
          </div>
        </div>
        <div
          class="two wide column review-card-right-grid-column"
        >
          <div
            class="ui container"
          >
            <div
              class="ui centered grid votes-container-grid"
            >
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="blue-upvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  10
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="blue-downvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  2
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="funny.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  3
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReviewCard tests setup review card test 6`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui container review-card-container"
      >
        <div
          class="ui grid"
        >
          <div
            class="fourteen wide column review-card-left-grid-column"
          >
            <div
              class="ui fluid container"
            >
              <div
                class="ui message"
                style="background-color: rgb(255, 241, 241);"
              >
                <i
                  aria-hidden="true"
                  class="red warning circle icon"
                />
                Please keep in mind that this review is more than 5 years old.
              </div>
              <div
                class="ui container review-card-left-column-header-container"
              >
                <div
                  class="ui header display-header"
                >
                  <span
                    class="sc-AxjAm ekCnfx"
                  >
                    COMS1004
                  </span>
                   
                  intro to programming
                </div>
                <h5
                  class="ui header"
                >
                  2014-07-31
                </h5>
                <div
                  class="sc-AxirZ JnqYJ"
                >
                  ID: 
                  1
                </div>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
              <h3
                class="ui header"
              >
                Workload
              </h3>
              <p>
                Excepteur sint occaecat cupidatat non proident.
              </p>
            </div>
          </div>
          <div
            class="two wide column review-card-right-grid-column"
          >
            <div
              class="ui container"
            >
              <div
                class="ui centered grid votes-container-grid"
              >
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="upvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    10
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="downvote.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    2
                  </strong>
                </div>
                <div
                  class="row votes-container-icon-row"
                >
                  <img
                    class="ui image"
                    src="funny.png"
                  />
                </div>
                <div
                  class="row votes-container-number-row"
                >
                  <strong>
                    3
                  </strong>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui container review-card-container"
    >
      <div
        class="ui grid"
      >
        <div
          class="fourteen wide column review-card-left-grid-column"
        >
          <div
            class="ui fluid container"
          >
            <div
              class="ui message"
              style="background-color: rgb(255, 241, 241);"
            >
              <i
                aria-hidden="true"
                class="red warning circle icon"
              />
              Please keep in mind that this review is more than 5 years old.
            </div>
            <div
              class="ui container review-card-left-column-header-container"
            >
              <div
                class="ui header display-header"
              >
                <span
                  class="sc-AxjAm ekCnfx"
                >
                  COMS1004
                </span>
                 
                intro to programming
              </div>
              <h5
                class="ui header"
              >
                2014-07-31
              </h5>
              <div
                class="sc-AxirZ JnqYJ"
              >
                ID: 
                1
              </div>
            </div>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            </p>
            <h3
              class="ui header"
            >
              Workload
            </h3>
            <p>
              Excepteur sint occaecat cupidatat non proident.
            </p>
          </div>
        </div>
        <div
          class="two wide column review-card-right-grid-column"
        >
          <div
            class="ui container"
          >
            <div
              class="ui centered grid votes-container-grid"
            >
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="upvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  10
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="downvote.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  2
                </strong>
              </div>
              <div
                class="row votes-container-icon-row"
              >
                <img
                  class="ui image"
                  src="funny.png"
                />
              </div>
              <div
                class="row votes-container-number-row"
              >
                <strong>
                  3
                </strong>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
